fix scrollbars in windows, remove chrome around startup

--- a/src/browser/jsx/components/tabbed-pane/tabbed-pane.less
+++ b/src/browser/jsx/components/tabbed-pane/tabbed-pane.less
@@ -28,9 +28,7 @@
 
 .tab-content {
   flex: 1 1;
-  overflow-y: scroll;
   position: relative;
-  height: 100%;
 }
 
 .tab-pane {
@@ -40,5 +38,6 @@
   left: 0;
   right: 0;
   position: absolute;
+  overflow: auto;
 }
 
