--- a/src/browser/jsx/containers/studio-layout/studio-layout.css
+++ b/src/browser/jsx/containers/studio-layout/studio-layout.css
@@ -31,6 +31,12 @@ main .form-horizontal .form-group {
   margin-right: 0;
 }
 
+/* override bootstrap because negative margins are evil (and cause scrollbars in split panes) */
+main .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .icon-overflowing:before {
   /* 4x for retina: of all the icons, this should look the best */
   background-size: auto 60%;
